# XBranch-1

./: Makefile.am  Makefile.incl  README.md  _autosetup  config.guess  configure.ac  nightly-tarball  sah_config.h
assimilator/: Makefile.am  sah_assimilate_handler.cpp  sah_assimilate_handler.h
client/: Makefile  Makefile.am  analyze.h  analyzeFuncs.cpp  analyzeFuncs.h  analyzePoT.cpp  analyzePoT.h  analyzeReport.cpp  autocorr.cpp  autocorr.h  chirpfft.cpp  confsettings.cpp  confsettings.h  fft8g.cpp  gaussfit.cpp  graphics_main.cpp  lcgamm.cpp  main.cpp  malloc_a.cpp  malloc_a.h  pulsefind.cpp  pulsefind.h  s_util.cpp  s_util.h  sah_gfx.cpp  sah_gfx_base.cpp  sah_gfx_base.h  sah_gfx_main.cpp  sah_gfx_main.h  seti.cpp  seti.h  seti_header.cpp  seti_header.h  spike.cpp  spike.h  timecvt.cpp  win-sah_config.h  worker.cpp
client/cuda/: cudaAcc_CalcChirpData.cu  cudaAcc_CleanExit.cpp  cudaAcc_CleanExit.h  cudaAcc_PowerSpectrum.cu  cudaAcc_analyzeReport.cpp  cudaAcc_analyzeReport.h  cudaAcc_autocorr.cu  cudaAcc_data.h  cudaAcc_fft.cu  cudaAcc_gaussfit.cu  cudaAcc_pulsefind.cu  cudaAcc_pulsefind.h  cudaAcc_summax.cu  cudaAcc_transpose.cu  cudaAcc_utilities.cu  cudaAcc_utilities.h  cudaAcceleration.cu  cudaAcceleration.h  nvapi_device.cpp  nvapi_device.h  nvapi_types.h
client/cuda/CUFFT/: codelets.h  oIFFT1024ps.cu  oIFFT256ps.cu  oIFFT512ps.cu  oIFFT8ps.cu
client/vector/: analyzeFuncs_fpu.cpp  analyzeFuncs_sse.cpp  analyzeFuncs_sse2.cpp  analyzeFuncs_sse3.cpp  analyzeFuncs_vector.cpp  hires_timer.cpp  hires_timer.h  x86_float4.h  x86_ops.h
client/win_build/: NvCudaRuntimeApi.defaultALL.rules  SAHjpeg.dev  glut.vcproj  image_libs.vcproj  jpeglib.vcproj  libboinc.vcproj  libboincapi.vcproj  libgraphics2.vcproj  resource  resource.h  seti_boinc.dev  seti_boinc.dsp  seti_boinc.vcproj  seti_boinc_private.h  seti_boinc_private.rc  seti_cuda.sln  seti_cuda.vcproj  seti_graphics.dev  seti_graphics.vcproj  setiboincdb.vcproj
client/win_build/libs/: libboinc_SSE.lib  libboinc_SSE_x64.lib  libboincapi_SSE.lib  libboincapi_SSE_x64.lib  libgraphics2_SSE.lib  libgraphics2_SSE_x64.lib  setiboincdb_SSE.lib  setiboincdb_SSE_x64.lib
db/: app_config.cpp  app_config.h  db_table.h  schema_master.cpp  schema_master.h  schema_master.sql  schema_to_class.awk  sqlblob.h  sqlifx.ec  xml_util.cpp  xml_util.h
db/tools/: Makefile.in  analysis_configs.xml  insert_analysis_config.cpp  insert_science_config.cpp  science_configs.xml  settings.sql
docs/: AUTHORS.txt  COPYRIGHT.txt  README_x41zc.txt  svnlog.txt
m4/: ax_check_glut.m4  nvcc.m4  optimizations.m4  sah_asmlib.m4  sah_check_boinc.m4  sah_check_healpix.m4  sah_find_setilib.m4
mac_build/: config-i386.h
splitter/: Makefile.am  mb_splitter.cpp  mb_validrun.cpp  mb_validrun.h  mb_wufiles.cpp  readtape.cpp  validrun.cpp  wufiles.cpp
tools/: Makefile.am
validate/: Makefile.in  sah_boinc_db.cpp  sah_result.cpp  sah_validate.cpp
